# AudioPlayer

./: .gitignore  CMakeLists.txt  audioplaypage.cpp  audioplaythread.cpp  audioplaythread.h  filetreewidget.cpp  filetreewidget.h  pagedisplay.cpp  pagedisplay.h  pagedisplay.ui  pagetranscription.cpp  pagetranscription.h  pagetranscription.ui  transcriptiondecodethread.cpp  transcriptionthread.cpp  transcriptionthread.h  widgettitle.cpp
python/translate/: prime_context.txt  process_srt.py  processed_context.txt  trans.py  trans_text.txt  translated_context.txt
python/voice/: voice.py
qss/: stylesheet1.qss
